Working on website

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <h3>StepTracker App</h3>
             <p>A mobile application to track daily steps, built with Android Studio. <a href="https://github.com/DaBest890/StepTrackers" target="_blank">View on GitHub</a></p>
         </div>
+        <div class="card">
+            <h3>Ballistics Calculator App</h3>
+            <p>An app designed to calculate ballistics information for various firearms and ammunition. Features a user-friendly interface for precise calculations. Stay tuned for updates!
+                <a href="https://github.com/DaBest890/BallisticsCalculator" target="_blank">View on GitHub</a></p>
+        </div>
         <!-- Add more project cards here -->
     </section>
 </main>
