--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <p>An app designed to calculate ballistics information for various firearms and ammunition. Features a user-friendly interface for precise calculations. Stay tuned for updates!
                 <a href="https://github.com/DaBest890/Step-Tracker-App/tree/master/BallisticsCalculator" target="_blank">View on GitHub</a></p>
         </div>
+        <div class="card">
+            <h3>Ballistics Calculator App</h3>
+            <p>An app designed to output the amount of paint you need for a designated area
+                <a href="https://github.com/DaBest890/Step-Tracker-App/tree/master/EclipseProjects/PaintArea" target="_blank">View on GitHub</a></p>
+        </div>
         <!-- Add more project cards here -->
     </section>
 </main>
