Working on website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://github.com/DaBest890/Step-Tracker-App/tree/master/BallisticsCalculator" target="_blank">View on GitHub</a></p>
         </div>
         <div class="card">
-            <h3>Ballistics Calculator App</h3>
+            <h3>Paint Area Program written in Java</h3>
             <p>An app designed to output the amount of paint you need for a designated area
                 <a href="https://github.com/DaBest890/Step-Tracker-App/tree/master/EclipseProjects/PaintArea" target="_blank">View on GitHub</a></p>
         </div>
